--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = '2018'
 
 [dependencies]
 failure = "= 0.1.2"
-futures-preview = "= 0.3.0-alpha.18"
+futures-preview = ""
 #libc = "= 0.2.43"
 
 [dev-dependencies]
@@ -24,5 +24,4 @@ members = [
   "starfish-executor",
   #"starfish-example-app",
   "starfish-file",
-  "starfish-futures"
 ]
