--- a/spdk-sys/Cargo.toml
+++ b/spdk-sys/Cargo.toml
@@ -15,7 +15,7 @@ links = "spdk"
 err-derive = ""
 #failure = ""
 #failure_derive = ""
-futures-preview = "= 0.3.0-alpha.18"
+futures-preview = ""
 libc = ""
 
 [build-dependencies]
