--- a/starfish-executor/Cargo.toml
+++ b/starfish-executor/Cargo.toml
@@ -9,7 +9,7 @@ Single threaded executor for futures-rs. No Arc in sight.
 edition = '2018'
 
 [dependencies]
-futures-preview = "= 0.3.0-alpha.18"
+futures-preview = ""
 
 [dev-dependencies]
 hamcrest2 = "*"
