--- a/starfish-file/Cargo.toml
+++ b/starfish-file/Cargo.toml
@@ -16,9 +16,10 @@ simple-error = ""
 regex = ""
 lazy_static = ""
 
-tokio = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7", features=["rt-full"] }
+tokio = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7", features=["rt-full", "sync"] }
 tokio-executor = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7", features=["current-thread"] }
 tokio-fs = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
+tokio-sync = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
 futures-preview = "=0.3.0-alpha.18"
 
 intrusive-collections = ""
