--- a/starfish-file/Cargo.toml
+++ b/starfish-file/Cargo.toml
@@ -22,6 +22,7 @@ tokio = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7", features
 tokio-executor = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7", features=["current-thread"] }
 tokio-fs = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
 tokio-sync = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
+tokio-timer = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
 futures-preview = "=0.3.0-alpha.18"
 
 intrusive-collections = ""
