--- a/starfish-file/Cargo.toml
+++ b/starfish-file/Cargo.toml
@@ -24,6 +24,7 @@ tokio-fs = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
 tokio-sync = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
 tokio-timer = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
 futures-preview = "=0.3.0-alpha.18"
+futures-intrusive = ""
 
 intrusive-collections = ""
 bytes = ""
@@ -31,6 +32,7 @@ byteorder = ""
 derive_builder = ""
 err-derive = ""
 enum_dispatch = ""
+crc = ""
 
 [dev-dependencies]
 hamcrest2 = "*"
