--- a/starfish-file/Cargo.toml
+++ b/starfish-file/Cargo.toml
@@ -9,8 +9,8 @@ Async File IO
 edition = '2018'
 
 [dependencies]
-io-uring = ""
-liburing-sys = ""
+#io-uring = ""
+#liburing-sys = ""
 
 simple-error = ""
 snafu = ""
@@ -19,13 +19,15 @@ regex = ""
 lazy_static = ""
 
 # 5f2f3f076d7c68c6cd31ff388ca14f3e7b463ab7
-tokio = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7", features=["rt-full", "sync"] }
-tokio-executor = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7", features=["current-thread"] }
-tokio-fs = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
-tokio-sync = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
-tokio-timer = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
-futures-preview = "=0.3.0-alpha.18"
+tokio = { version = "0.2.0-alpha.2", features=["rt-full", "sync", "timer"] }
+tokio-executor = { version = "0.2.0-alpha.2", features=["current-thread"] }
+tokio-fs = "0.2.0-alpha.6"
+tokio-sync = "0.2.0-alpha.6"
+futures-preview = "= 0.3.0-alpha.19"
 futures-intrusive = ""
+tonic = "0.1.0-alpha.1"
+prost = "0.5"
+prost-derive = "0.5"
 
 bytes = ""
 byteorder = ""
